# expression-parser

./: .replit  CHANGELOG.md  LICENSE  Main.hs  Tokenizer.hs  expression-parser.cabal  replit.nix
Tokenizer/: Token.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: expression-parser-0.1.0.0-inplace.conf  package.cache
src/: Parser.hs  Tokenizer.hs
src/Parser/: ShuntingYard.hs
src/Tokenizer/: Delimiter.hs  Operator.hs  Token.hs
test/: SpecHelper.hs  TokenizerSpec.hs
test/Parser/: ShuntingYardSpec.hs
