cabal-version:      3.0
name:               expression-parser
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/alinespereira/expression-parser
license:            MIT
license-file:       LICENSE
author:             Aline Pereira
maintainer:         aline@datagurl.io
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  default-language:   Haskell2010
  build-depends:      base ^>=4.15.1.0
                    , containers
  ghc-options:        -Wall

common warnings
    ghc-options: -Wall

library
    import:           warnings
                    , shared-properties
    exposed-modules:  Parser
                    , Parser.ShuntingYard
                    , Tokenizer
                    , Tokenizer.Delimiter
                    , Tokenizer.Operator
                    , Tokenizer.Token
    hs-source-dirs:   src

executable expression-parser
    import:           warnings
                    , shared-properties
    main-is:          Main.hs
    build-depends:    expression-parser

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite expression-parser-test
    import:           warnings
                    , shared-properties
    other-modules:    SpecHelper
                    , TokenizerSpec
                    , Parser.ShuntingYardSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    hspec 
                    , hspec-discover
                    , expression-parser
